added modifications for multiple day predictions

--- a/exploration/exploration.ipynb
+++ b/exploration/exploration.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/Bel/Kerjaan/Kuliah/Tugas Akhir\n"
+      "e:\\Kerjaan\\Kuliah\\Tugas Akhir\n"
      ]
     }
    ],
@@ -35,9 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\belmi\\anaconda3\\envs\\tugas-akhir\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import h5py\n",
     "import numpy as np\n",
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,43 +208,117 @@
        "      <td>7.0</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4minute_zh.wikipedia.org_all-access_spider</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>52_Hz_I_Love_You_zh.wikipedia.org_all-access_s...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 804 columns</p>\n",
+       "<p>5 rows × 804 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      Page  2015-07-01  2015-07-02  \\\n",
-       "0  2NE1_zh.wikipedia.org_all-access_spider        18.0        11.0   \n",
-       "1   2PM_zh.wikipedia.org_all-access_spider        11.0        14.0   \n",
-       "2    3C_zh.wikipedia.org_all-access_spider         1.0         0.0   \n",
+       "                                                Page  2015-07-01  2015-07-02  \\\n",
+       "0            2NE1_zh.wikipedia.org_all-access_spider        18.0        11.0   \n",
+       "1             2PM_zh.wikipedia.org_all-access_spider        11.0        14.0   \n",
+       "2              3C_zh.wikipedia.org_all-access_spider         1.0         0.0   \n",
+       "3         4minute_zh.wikipedia.org_all-access_spider        35.0        13.0   \n",
+       "4  52_Hz_I_Love_You_zh.wikipedia.org_all-access_s...         NaN         NaN   \n",
        "\n",
        "   2015-07-03  2015-07-04  2015-07-05  2015-07-06  2015-07-07  2015-07-08  \\\n",
        "0         5.0        13.0        14.0         9.0         9.0        22.0   \n",
        "1        15.0        18.0        11.0        13.0        22.0        11.0   \n",
        "2         1.0         1.0         0.0         4.0         0.0         3.0   \n",
+       "3        10.0        94.0         4.0        26.0        14.0         9.0   \n",
+       "4         NaN         NaN         NaN         NaN         NaN         NaN   \n",
        "\n",
        "   2015-07-09  ...  2017-09-01  2017-09-02  2017-09-03  2017-09-04  \\\n",
        "0        26.0  ...        19.0        33.0        33.0        18.0   \n",
        "1        10.0  ...        32.0        30.0        11.0        19.0   \n",
        "2         4.0  ...         6.0         6.0         7.0         2.0   \n",
+       "3        11.0  ...         7.0        19.0        19.0         9.0   \n",
+       "4         NaN  ...        16.0        16.0        19.0         9.0   \n",
        "\n",
        "   2017-09-05  2017-09-06  2017-09-07  2017-09-08  2017-09-09  2017-09-10  \n",
        "0        16.0        27.0        29.0        23.0        54.0        38.0  \n",
        "1        54.0        25.0        26.0        23.0        13.0        81.0  \n",
        "2         4.0         7.0         3.0         4.0         7.0         6.0  \n",
+       "3         6.0        16.0        19.0        30.0        38.0         4.0  \n",
+       "4        20.0        23.0        28.0        14.0         8.0         7.0  \n",
        "\n",
-       "[3 rows x 804 columns]"
+       "[5 rows x 804 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print(len(train_2))\n",
-    "train_2.head(3)"
+    "train_2.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'spider', 'all-agents'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {}\n",
+    "print(set([x.split('.org_')[-1].split('_')[1] for x in train_2['Page'].tolist()]))"
    ]
   },
   {
